--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build: .
@@ -9,19 +7,25 @@ services:
       - nats
     environment:
       - NATS_URL=nats://nats:4222
-      - DATABASE_URL=sqlite+aiosqlite:///./vacancies.db
+      - DATABASE_URL=sqlite+aiosqlite:///./data/vacancies.db
+      - HH_API_URL=https://api.hh.ru/vacancies
+      - BACKGROUND_TASK_INTERVAL=600
     volumes:
       - ./data:/app/data
+      - ./app:/app/app
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    restart: unless-stopped
 
   nats:
     image: nats:latest
     ports:
       - "4222:4222"
       - "8222:8222"
+    restart: unless-stopped
 
   nats-box:
     image: natsio/nats-box:latest
     depends_on:
       - nats
     command: ["tail", "-f", "/dev/null"]
+    restart: unless-stopped
