--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 fastapi==0.104.1
-uvicorn==0.24.0
+uvicorn[standard]==0.24.0
 sqlalchemy==2.0.23
 aiosqlite==0.19.0
 httpx==0.25.1
 pydantic==2.5.0
+pydantic-settings==2.1.0
 nats-py==2.0.0
 python-dotenv==1.0.0
+websockets==12.0
