--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,9 @@ services:
       - DATABASE_URL=sqlite+aiosqlite:///./data/vacancies.db
       - HH_API_URL=https://api.hh.ru/vacancies
       - BACKGROUND_TASK_INTERVAL=600
+      - DEBUG=true
+      - LOG_LEVEL=debug
+      - CORS_ORIGINS=["http://localhost:3000", "http://localhost:5173"]
     volumes:
       - ./data:/app/data
       - ./app:/app/app
